--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 .upper{
     
     background-color: #e4f9f5;
-    padding-bottom: 200px;
+    padding-bottom: 100px;
 
     
     
@@ -28,7 +28,17 @@ h1{
     padding-top: 150px;
     text-align: center;
     color: #66BFBF;font-family: 'Sacramento', cursive;
-    font-size: 4rem;
+    font-size: 4.5rem;
+}
+h2{
+
+    color: #66BFBF;font-family: 'Noto Sans TC', sans-serif;
+    text-align: center;
+    font-size: 2.5rem;
+    margin-top: 50px;
+    margin-left: 10px;
+}
+h3{ padding-top: 20px;
 }
 .centre{
     text-align: center;
@@ -39,4 +49,88 @@ h1{
     display: block; 
     margin: 100px auto 0 auto;
 
+}
+.avatar{
+    width: 15%;
+    /* border: 2px solid red; */
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+.middle p{
+    /* border: 2px solid black; */
+    width: 35%;
+    text-align: center;
+    margin: auto;
+    margin-top: 50px;
+    font-weight: normal;
+    font-style: italic;
+    font-size: 20px;
+}
+hr.new{
+   border-top: 10px solid gray;
+   border-style: dotted;
+   width: 8%;
+   margin: auto;
+   margin-top: 150px;
+   border-bottom: none;
+   border-left: none;
+   border-right: none;
+
+}
+
+.skills{
+    width: 50%;
+    margin: 100px auto;
+}
+.skills p{
+    padding-top: 30px;
+    font-style: italic;
+    font-size: 20px;
+}
+.skills img{
+    width: 25%;
+    border-radius: 50%;
+    
+}
+.code-img{
+    float:left;
+    margin-right: 20px;
+
+}
+.chillie-img{
+    float: right;
+    margin-left: 20px;
+}
+.lower{
+    text-align: center;
+}
+footer{
+    background-color:#66BFBF ;
+    margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+}
+.footerbox{
+    
+    width: 50%;
+    margin: auto;
+    text-align: center;
+}
+.footerbox a{
+    color: white;
+    text-decoration: none;
+    margin: 20px;
+    font-size: 28px;
+    padding:10px;
+    
+    border-radius: 50px;
+}
+.footerbox a:hover{
+    
+    background-color: #db6400;
+    padding: 10px;
+    box-sizing: border-box;
 }
